<resources>
    <string name="twitter_consumer_key" formatted="false" translatable="false">q2YTbgPBnVQpQGHwFkw0mxubw</string>
    <string name="twitter_consumer_secret" formatted="false" translatable="false">VIzlDGrvSOnXIFKNRBZX1oL5yeMydnQqf8J22kpdHqP7rjSohA</string>
    <string name="facebook_app_id" formatted="false" translatable="false">289562208048029</string>
    <string name="app_name">AkibaMapAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="now_loading">Now Loading…</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="category_all_shop">全ての店</string>
    <string name="category_electric_shop">電気店</string>
    <string name="category_cafe_shop">喫茶店</string>
    <string name="category_restaurant">レストラン</string>
    <string name="category_hotel">ホテル</string>
    <string name="nav_logout">ログアウト</string>
    <string name="nav_login">ログイン</string>
    <string name="nav_settings">設定</string>
    <string name="nav_add_spot">スポットを追加</string>
    <string name="nav_ranking">ランキング</string>
    <string name="nav_exit">終了</string>
    <string name="okay">OK</string>
    <string name="nav_other">その他</string>
    <string name="profile_default_id">ログインしていません</string>
    <string name="profile_default_id_template">ID:%1$s</string>
    <string name="profile_default_name">名無し</string>
    <string name="add_spot_category_not_found">カテゴリなし</string>
    <string name="add_spot_category_not_found_message">カテゴリを1つ以上選択してください</string>
    <string name="add_spot_pin_not_found">地図をタップしてピンを刺してください</string>
    <string name="add_spot_required_blank">すべての項目に文字を入力してください。</string>
    <string name="add_spot_url_not_match">URLが不正です</string>
    <string name="add_spot_image_not_found_or_photo_x1_less">画像は1枚以上添付してください</string>
    <string name="add_spot_name">スポット名</string>
    <string name="add_spot_address">住所</string>
    <string name="add_spot_details">詳細説明</string>
    <string name="add_spot_category">カテゴリ</string>
    <string name="add_spot_category_select">カテゴリ選択</string>
    <string name="add_spot_url">URL</string>
    <string name="add_spot_search">検索</string>
    <string name="add_spot_image">画像</string>
    <string name="add_spot_image_select">画像選択</string>
    <string name="ranking_fragment_adapter_views">View:%1$d</string>
</resources>