<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/nav_category" />
    <item android:title="@string/nav_other">
        <menu>
            <item
                android:id="@+id/nav_add_spot"
                android:icon="@drawable/ic_add_location_black"
                android:title="@string/nav_add_spot" />
            <item
                android:id="@+id/nav_ranking"
                android:icon="@drawable/ic_favorite_black"
                android:title="@string/nav_ranking" />
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_account_box_black"
                android:title="@string/nav_login" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_account_box_black"
                android:title="@string/nav_logout" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_to_app_black"
                android:title="@string/nav_exit" />
        </menu>
    </item>

</menu>
