<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_spot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.dentare.akibamapandroid.activity.AddSpotActivity"
    tools:showIn="@layout/activity_add_spot">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/add_spot_name" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/add_spot_name"
                android:id="@+id/editTextName"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/add_spot_address" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/add_spot_address"
                android:id="@+id/editTextAddress"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/add_spot_details" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/add_spot_details"
                android:id="@+id/editTextDetails"
                android:layout_weight="3"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/add_spot_url" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/add_spot_url"
                android:id="@+id/editTextUrl"
                android:layout_weight="3"
                android:inputType="textUri" />

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/add_spot_category" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <Button
                    android:text="@string/add_spot_category_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonSelectCategory" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewCategory" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/add_spot_image" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <Button
                    android:text="@string/add_spot_image_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonSelectImage" />

                <fragment
                    android:id="@+id/imageSwipeFragment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_fragment_height"
                    android:name="net.dentare.akibamapandroid.fragment.ImageSwipeFragment" />
            </LinearLayout>
        </LinearLayout>

        <fragment
            android:name="com.google.android.gms.maps.MapFragment"
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_map_height"/>
    </LinearLayout>
</ScrollView>
